test/types/cptr/c_ptrTo_domain.2.good
c_ptrTo_domain.chpl:9: error: c_ptrToConst domain type not supported
